:lipstick: Fix spacing

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -150,7 +150,7 @@
   @apply pt-2;
   @apply w-full;
   @apply text-center;
-  // @apply mb-4;
+  @apply mb-4;
 
   h1 {
     @apply text-xl;
